--- a/install
+++ b/install
@@ -5,6 +5,6 @@ rm -rf build
 rm -rf dist
 rm -rf *.egg-info
 rm -rf zonemap.so
-python setup.py build_ext --inplace
-python setup.py install --user
+./setup.py build_ext --inplace
+./setup.py install --user
 
